package com.mef.parkauto.entity;

public enum CarteCarburantStatut {
    ACTIVE,
    SUSPENDUE,
    EXPIREE,
    PERDUE,
    REMPLACEE,
    DESACTIVEE
}
