package com.mef.parkauto.entity;

public enum StatutMaintenance {
    PROGRAMMEE,
    EN_COURS,
    TERMINEE,
    ANNULEE
}
