package com.mef.parkauto.entity;

public enum TypeMaintenance {
    PREVENTIVE,
    CURATIVE,
    REGLEMENTAIRE,
    SINISTRE_ACCIDENT
}
