@startuml
!include _theme.puml
title Diagramme de classes - Carburant et maintenance
hide circle
skinparam classAttributeIconSize 0

class Vehicule <<Entity>> {
  - immatriculation: String
  - kilometrageActuel: Long
  - consommationTheorique: BigDecimal
}

class PleinCarburant <<Entity>> {
  - datePlein: LocalDate
  - stationService: String
  - quantiteLitres: BigDecimal
  - prixUnitaire: BigDecimal
  - montantTTC: BigDecimal
  - kilometrage: Long
  - consommationMoyenne: BigDecimal
  - anomalieSurconsommation: Boolean
}

class CarteCarburant <<Entity>> {
  - numeroCarte: String
  - fournisseur: String
  - plafondMensuel: BigDecimal
  - solde: BigDecimal
  - dateExpiration: LocalDate
  - statut: CarteCarburantStatut
}

class InterventionMaintenance <<Entity>> {
  - typeMaintenance: TypeMaintenance
  - natureOperation: NatureMaintenance
  - dateRealisation: LocalDate
  - kilometrageRealise: Long
  - prestataire: String
  - coutMainOeuvre: BigDecimal
  - coutPieces: BigDecimal
  - montantTotal: BigDecimal
  - statut: StatutMaintenance
}

enum TypeMaintenance {
  PREVENTIVE
  CURATIVE
  REGLEMENTAIRE
}

enum StatutMaintenance {
  PROGRAMMEE
  EN_COURS
  TERMINEE
  ANNULEE
}

enum CarteCarburantStatut {
  ACTIVE
  SUSPENDUE
  EXPIREE
  PERDUE
  REMPLACEE
}

Vehicule "1" *-- "0..*" PleinCarburant
Vehicule "1" *-- "0..*" InterventionMaintenance
Vehicule "1" o-- "0..1" CarteCarburant
PleinCarburant "0..*" --> "0..1" CarteCarburant
InterventionMaintenance --> TypeMaintenance
InterventionMaintenance --> StatutMaintenance
CarteCarburant --> CarteCarburantStatut

note bottom of InterventionMaintenance
  Le garage est le champ texte "prestataire".
  Il n'existe pas d'entite GarageAgree.
end note
@enduml
